--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 body {
     font-family: 'Arial', sans-serif;
-    margin: 20px;
+    margin:0px;
+    <!--margin: 20px;
     display: flex;
     justify-content: center; /* 水平居中 */
     align-items: center; /* 垂直居中 */
-    height: 100vh; /* 让网页铺满整个视口高度 */
+    height: 100vh; /* 让网页铺满整个视口高度 */--!>
 }
 
 h1, h2 {
