--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,50 @@
 body {
     font-family: 'Arial', sans-serif;
-    margin: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #3498db;
+    padding: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    text-align: center;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+}
+
+    nav ul li {
+        display: inline-block;
+        margin: 0 10px;
+    }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+
+            nav ul li a:hover {
+                background-color: #2980b9;
+            }
+
+            nav ul li a.active {
+                background-color: #fff;
+                color: #3498db;
+            }
+
+main {
+    padding-top: 80px;
 }
 
 h1, h2 {
@@ -19,4 +63,120 @@ textarea {
     width: 100%;
     height: 100px;
     margin-top: 10px;
+}
+
+.container {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+}
+
+@media (max-width: 768px) {
+    h1, h2 {
+        font-size: smaller;
+    }
+
+    .container {
+        padding: 10px;
+    }
+
+    button, textarea {
+        margin-top: 5px;
+    }
+}
+
+iframe {
+    width: 100%;
+    aspect-ratio: 16 / 9;
+    max-width: 800px;
+}
+
+##characterImageWrapper {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
+}
+
+#characterImageWrapper img {
+    flex: 0 0 100%;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    scroll-snap-align: center;
+}
+
+#characterImageContainer {
+    width: 100%;
+    max-width: 800px;
+    height: 0;
+    padding-bottom: 75%;
+    position: relative;
+    scroll-snap-align: center;
+}
+
+#characterImage {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: contain;
+}
+
+#characterControls {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.centered-title {
+    text-align: center;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1001;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+}
+
+#gotItButton {
+    margin-top: 10px;
+}
+
+#characterSearch {
+    margin-bottom: 20px;
+}
+
+#searchInput {
+    padding: 10px;
+    width: 200px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#characterSearch button {
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
